--- a/src/apps/gift/views/failed.pug
+++ b/src/apps/gift/views/failed.pug
@@ -10,7 +10,6 @@ block contents
 				A problem occured while purchasing your gift
 			p.
 				We haven't been able to take a payment. To resolve this
-				please contact #[+emailSupport],
-				quoting the gift ID below
+				please contact #[+emailSupport], quoting the gift ID below
 
 			pre= id
