--- a/src/static/scss/pages/_join.scss
+++ b/src/static/scss/pages/_join.scss
@@ -1,65 +1,52 @@
 $bp-join-why: 768px;
 
 .join-header {
-	position: relative;
-	margin: -22px 0 4rem;
-	overflow: hidden;
-	padding: 2rem;
-	background-color: $c-black;
-	@media (min-width: $bp-join-form) {
-		min-height: 320px;
-	}
+	display: flex;
+	margin: -22px 0 0;
 }
 
 
-.join-header__bg,
 .join-header-static {
-	background: url(https://static.thebristolcable.org/uploads/2020/05/AGM19_IMG_7049-%E2%94%AC%C2%AEChelseyCliff-tight-crop-1080x607.jpg) no-repeat top center;
+	background: url(/static/imgs/gift-bg.jpg) no-repeat top center;
 	@media (min-width: $bp-join-form) {
-		background-image: url(https://static.thebristolcable.org/uploads/2020/05/AGM19_IMG_7049-%E2%94%AC%C2%AEChelseyCliff-tight-crop-1900x1080.jpg);
-	}
-}
-
-.join-header__bg {
-	margin: -2rem -2rem 2rem;
-	padding-bottom: 56.25%;
-	background-size: 100%;
-
-	@media (min-width: $bp-join-form) {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		margin: 0;
-		padding-bottom: 0;
-		background-image: url(https://static.thebristolcable.org/uploads/2020/05/AGM19_IMG_7049-%E2%94%AC%C2%AEChelseyCliff-tight-crop-1900x1080.jpg);
-		background-size: cover;
-		background-attachment: fixed;
+		background-image: url(/static/imgs/gift-bg.jpg);
 	}
 }
 
 .join-header-static {
 	padding-bottom: 56.25%;
 	background-size: cover;
-	background-position: center 35%;
+	background-position: center;
 	@media (min-width: $bp-join-form) {
 		padding-bottom: 0;
-		min-height: 320px;
+		min-height: 350px;
 	}
 }
 
 .join-form {
-	background-color: transparentize(white, 0.1);
+	background-color: white;
 	position: relative;
 	padding: 2rem;
-	margin: -2rem;
 
-	@media (min-width: $bp-join-form) {
-		width: 50%;
-		max-width: 600px;
-		margin: 0 auto;
+	@media (min-width: 600px) {
+		flex: 0 0 600px;
+		padding: 2rem 4rem;
 	}
+
+	h4 {
+		margin: 2.5rem 0 1rem;
+		font-size: 20px;
+	}
+}
+
+.join-img {
+	position: sticky;
+	top: 0;
+	object-fit: cover;
+	object-position: center;
+	flex: 1 1 0;
+	width: 100%;
+	max-height: 100vh;
 }
 
 .join-referrer {
@@ -95,8 +82,8 @@ $bp-join-why: 768px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin: 0 0 2rem;
-	font-size: 48px;
+	margin: 0 0 2.5rem;
+	font-size: 60px;
 }
 
 .join-paper {
@@ -152,7 +139,7 @@ $bp-join-why: 768px;
 .join-field__input {
 	width: 100%;
 	height: 100%;
-	font-size: inherit !important; // Override theme
+	font-size: 22px !important; // Override theme
 	background: none;
 	border: 0;
 	outline: 0;
@@ -173,7 +160,7 @@ $bp-join-why: 768px;
 .join-field-group {
 	@media (min-width: $bp-join-form) {
 		display: flex;
-		margin: 0 -0.5rem -2rem;
+		margin: 0 -0.5rem -1rem;
 
 		& > .join-field {
 			margin-left: 0.5rem;
@@ -317,8 +304,7 @@ $bp-join-why: 768px;
 .join-gift-reasons {
 	list-style: none;
 	padding: 0;
-	margin: 0 0 1rem;
-	font-weight: bold;
+	margin: 2rem 0 1rem;
 
 	& > li {
 		position: relative;
@@ -348,7 +334,18 @@ $bp-join-why: 768px;
 	opacity: 0;
 }
 
+.join-gift-options {
+	display: flex;
+	gap: 1rem;
+	margin-bottom: 2rem;
+	flex-direction: column;
+	@media (min-width: 500px) {
+		flex-direction: row;
+	}
+}
+
 .join-gift-btn {
+	white-space: normal;
 	small {
 		display: block;
 		font-size: 2rem;
