Add t-shirt colours

--- a/src/apps/gift/views/index.pug
+++ b/src/apps/gift/views/index.pug
@@ -25,7 +25,9 @@ block body
 				li Our award-nominated weekly newsletter with a round up of what's happening in Bristol
 				li A limited edition t-shirt (12 month gift only)
 
-			img(src='/static/imgs/gift-header.png' style='width:100%')
+			div
+				a(href='/static/imgs/gift-tshirt-white.jpg' target='_blank'): img(src='/static/imgs/gift-tshirt-white.jpg' style='width:50%')
+				a(href='/static/imgs/gift-tshirt-black.jpg' target='_blank'): img(src='/static/imgs/gift-tshirt-black.jpg' style='width:50%')
 
 			.js-gift-errors
 				include /views/partials/flash.pug
