--- a/src/apps/gift/views/index.pug
+++ b/src/apps/gift/views/index.pug
@@ -16,7 +16,7 @@ block body
 
 			h1.join-title.text-center Gift The Cable
 
-			h4 
+			h4 You'll be gifting someone...
 
 			ul.join-gift-reasons
 				li Our award-nominated weekly newsletter with a round up of what's happening in Bristol
