--- a/src/apps/gift/views/index.pug
+++ b/src/apps/gift/views/index.pug
@@ -82,4 +82,4 @@ block body
 					svg(xmlns='http://www.w3.org/2000/svg', viewBox='0 0 24 24')
 						path(fill='currentColor', d='M18 10v-4c0-3.313-2.687-6-6-6s-6 2.687-6 6v4h-3v14h18v-14h-3zm-10 0v-4c0-2.206 1.794-4 4-4s4 1.794 4 4v4h-8z')
 					| Your payment will be processed securely with Stripe.
-		img(src='/static/imgs/gift-bg.jpg').join-img
+		img(src='https://static.thebristolcable.org/uploads/2023/12/231206_BristolCable_ShonFaye@Strangebrew_-0002-1900x1080.jpg').join-img
