Add last delivery notice

--- a/src/apps/gift/views/index.pug
+++ b/src/apps/gift/views/index.pug
@@ -16,6 +16,10 @@ block body
 
 			h1.join-title.text-center Gift The Cable
 
+			.alert.alert-info.
+				Order by 20th December to receive the t-shirt in time for Christmas,
+				otherwise it will be delivered in the new year.
+
 			h4 You'll be gifting someone...
 
 			ul.join-gift-reasons
