Fix old polls tool for variants and slides

--- a/src/apps/tools/apps/polls/views/poll.pug
+++ b/src/apps/tools/apps/polls/views/poll.pug
@@ -6,7 +6,7 @@ block prepend title
 block contents
 	.row
 		.col-md-12
-			+page_header('Callout: ' + poll.title)
+			+page_header('Callout: ' + poll.variants[0].title)
 
 			dl.dl-horizontal
 				dt Status
